# relcoord

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  relcoord.toml.example
.buildkite/: pipelinegen.toml
.github/workflows/: pr-checks.yml  publish-image.yml
docs/: version-service-design.md  version-service-implementation-notes.md
src/relcoord/: __init__.py  app.py  auth.py  change.py  config.py  dynamodb_store.py  errors.py  git.py  in_memory_repository.py  in_memory_store.py  kubernetes.py  main.py  models.py  repository.py  retrying_store.py  semver.py  service.py  store.py  surreal_repository.py  surreal_store.py
tests/: conftest.py  test_app.py  test_auth.py  test_change.py  test_config.py  test_dynamodb_store.py  test_git.py  test_kubernetes.py  test_main.py  test_retrying_store.py  test_semver.py  test_service.py  test_surreal_repository.py  test_surreal_store.py
