[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "relcoord"
version = "0.1.1"
description = "Image version service for relcoord."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
  "click>=8.1.0,<9.0.0",
  "httpx>=0.28.1,<1.0.0",
  "hypercorn>=0.17.3,<1.0.0",
  "starlette>=0.48.0,<1.0.0",
  "surrealdb>=2.0.0,<3.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "pytest>=9.0.3",
  "ty",
  "ruff",
  "bktools",
]


[[tool.uv.index]]
url = "https://repo.noa.re/"

[project.scripts]
relcoord = "relcoord.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/relcoord"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
