[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "relcoord"
version = "0.1.1"
description = "Image version service for relcoord."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
  "boto3",
  "click",
  "dulwich",
  "httpx",
  "hypercorn",
  "manifest-builder",
  "pyjwt[crypto]",
  "starlette",
  "surrealdb",
]

[dependency-groups]
dev = [
  "httpx",
  "pytest",
  "ty",
  "ruff",
  "bktools",
]


[[tool.uv.index]]
url = "https://repo.noa.re/"

[project.scripts]
relcoord = "relcoord.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/relcoord"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
